<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelecineActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/content_padding"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >

      <Button
          android:id="@+id/launch"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:paddingTop="24dp"
          android:paddingBottom="24dp"
          android:text="@string/launch_overlay"
          />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="32dp"
          android:layout_marginBottom="8dp"
          android:text="@string/preferences"
          android:textAllCaps="true"
          android:textColor="?android:attr/colorAccent"
          android:fontFamily="sans-serif-condensed"
          android:textAlignment="viewStart"
          />

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/preference_height"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/video_size_percentage"
            android:textAlignment="viewStart"
            />
        <Spinner
            android:id="@+id/spinner_video_size_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/preference_height"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/countdown"
            android:textAlignment="viewStart"
            />
        <Switch
            android:id="@+id/switch_show_countdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/preference_height"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recents_hide"
            android:textAlignment="viewStart"
            />
        <Switch
            android:id="@+id/switch_hide_from_recents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/preference_height"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recording_notification"
            android:textAlignment="viewStart"
            />
        <Switch
            android:id="@+id/switch_recording_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="@dimen/preference_height"
          android:orientation="horizontal"
          android:gravity="center_vertical"
          >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_touches"
            android:textAlignment="viewStart"
            />
        <Switch
            android:id="@+id/switch_show_touches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
      </LinearLayout>

    </LinearLayout>
</ScrollView>
